--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.0.2</version>
+        <properties>
+          <maven.compiler.source>1.8</maven.compiler.source>
+          <maven.compiler.target>1.8</maven.compiler.target>
+        </properties>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
           <archive>
             <manifest>
               <addClasspath>true</addClasspath>
