--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <version>3.0.2</version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <source>1.8</source>
+        <target>1.8</target>
         <configuration>
           <archive>
             <manifest>
